# melly

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-ci.yaml  python-publish-pypi.yaml
docs/source/: conf.py  index.rst
src/melly/: __init__.py  __main__.py  cli.py  parser.py
tests/: test_parser.py
